# erc8004-solana

./: .gitignore  AUDIT_DEEP_DIVE.md  AUDIT_ERC8004_COMPLETE.md  AUDIT_GIVE_FEEDBACK.md  AUDIT_REPUTATION_FINAL.md  AUDIT_REPUTATION_REGISTRY.md  Anchor.toml  LICENSE  README.md  SDK.md
docs/: DEVNET_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_BENCHMARKS.md
programs/identity-registry/: Cargo.toml
programs/identity-registry/src/: error.rs  lib.rs  state.rs
programs/reputation-registry/: Cargo.toml
programs/reputation-registry/src/: error.rs  events.rs  lib.rs  state.rs
programs/validation-registry/: Cargo.toml
programs/validation-registry/src/: error.rs  events.rs  lib.rs  state.rs
scripts/: initialize-devnet.ts  measure-devnet-costs.sh  measure-exact-costs.ts  measure-real-costs.ts  test-devnet-manual.ts  test-exhaustive-devnet.ts  test-ultimate-coverage.ts
sdk/: metadata-helpers.ts
tests/: arithmetic-edge-cases.ts  concurrency-tests.ts  cost-measurement.ts  e2e-integration.ts  erc8004-solana.ts  identity-registry.ts  measure-costs-simple.ts  measure-costs.ts  measure-real-costs.ts  metadata-response-tests.ts  reputation-feedbackauth.ts  reputation-registry.ts  reputation-unit-tests.ts  security-critical.ts  validation-advanced.ts  validation-helpers.ts  validation-init.ts  validation-lifecycle.ts  validation-request.ts  validation-response.ts
